--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ lazy-object-proxy==1.8.0
 mccabe==0.7.0
 platformdirs==2.6.0
 pylint==2.15.9
+python-dotenv==0.21.0
 pytz==2022.7
 requests==2.28.1
 sqlparse==0.4.3
