--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ venv
 frontend/node_modules
 /.env
 /frontend/.env
-/first_r_app/test.py
+/first_r_app/my_tmp_test.py
 /fixtures/.json
 /fixtures/fix
 /Django_rest_GB/test.html
