--- a/Deploy/docker-compose.yaml
+++ b/Deploy/docker-compose.yaml
@@ -12,13 +12,28 @@ services:
   backend:
     build:
       context: ../.
-    ports:
-      - 8080:8080
+    env_file:
+      - ../.env
+    expose:
+      - 8080
     command: bash -c "
       ./wait-for-postgres.sh db
-      && python manage.py migrate
-      && python manage.py create_data
-      && python manage.py runserver 0.0.0.0:8080
+      && python ./Django_rest_GB/manage.py makemigrations
+      && python ./Django_rest_GB/manage.py migrate
+      && python ./Django_rest_GB/manage.py createsuperuser --noinput
+      && gunicorn ./Django_rest_GB/Django_rest_GB.wsgi -b 0.0.0.0:8080
       "
+#    depends_on:
+#      - db
+  nginx:
+    build: ./nginx
+    ports:
+      - 8000:80
     depends_on:
-      - db
+      - backend
+  frontend:
+    build: ../frontend
+    ports:
+      - 80:80
+    depends_on:
+      - nginx
